update module: model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,8 @@
         "GOOS": "js"
     },
     "go.buildTags": "js,wasm",
+    "cSpell.words": [
+        "localdb",
+        "upgradeneeded"
+    ],
 }
